<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tv_steps_header"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="STEPS"
        android:textSize="27dp"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:background="@drawable/backdark"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>
   <android.support.v7.widget.RecyclerView
        android:layout_below="@+id/tv_steps_header"
        android:id="@+id/rv_recipe_steps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        />
</RelativeLayout>