<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
       <LinearLayout android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="2dp"
            android:orientation="vertical"
            android:id="@+id/ll_top">
          <include
            layout="@layout/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="55dp"/>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:layout_below="@+id/ll_top"
            android:id="@+id/rv_recipe_cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            />
    </RelativeLayout>
</LinearLayout>