...
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/playerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:fastforward_increment="1000"
            app:rewind_increment="1000"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
...
